@@ -54,7 +54,7 @@
 	 handle_info/3,
 	 terminate/3]).
 
--include("exmpp.hrl").
+-include_lib("exmpp/include/exmpp.hrl").
 
 -include("ejabberd.hrl").
 -include("mod_privacy.hrl").
